Add more jeiba api
